--- a/templates/submit.html
+++ b/templates/submit.html
@@ -51,7 +51,7 @@
       <li class="ui-state"><span>&#x21C5;</span><input type="text" disabled/><audio id="{{file_address3_1}}" controls preload src="{{file_address3_1}}">
         Your browser does not support the audio element.
       </audio></li>
-      <li class="ui-state"><span>&#x21C5;</span><input type="text" disabled/><audio id="{{file_address4_1}}" controls preload src="{{file_address4_1}}"s>
+      <li class="ui-state"><span>&#x21C5;</span><input type="text" disabled/><audio id="{{file_address4_1}}" controls preload src="{{file_address4_1}}">
         Your browser does not support the audio element.
       </audio></li>
     </ul>
