update questionnaire wordings

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -40,7 +40,7 @@
 
 
     
-    <p style = "font-weight: bold;">(*)請按照您的喜好程度，排序您剛剛測試的所有 audio captcha，最喜歡的放在最上面，依序排列下去。</p><br>
+    <p style = "font-weight: bold;">(*)請按照您的喜好程度，排序您剛剛測試的所有 Audio Captcha，最喜歡的放在最上面，依序排列下去。</p><br>
     <ul id="input_ul">
       <li class="ui-state"><span>&#x21C5;</span><input type="text" disabled/><audio id="{{file_address1_1}}" controls preload src="{{file_address1_1}}">
         Your browser does not support the audio element.
@@ -60,10 +60,10 @@
     <br><br>
 
 
-    <label class="statement">(*)請簡述您最喜愛該 audio captcha 的原因：</label>
+    <label class="statement">(*)請簡述您把該 Audio CAPTCHA 放在第一位（最喜歡）的原因</label>
     <input type="text" name="reasontolove" />
 
-    <label class="statement">對於這個 Audio Captcha 您是否有什麼建議以及想法可以分享給我們？</label>
+    <label class="statement">(*)請簡述您把該 Audio CAPTCHA 放在最後第一位（最喜歡）的原因：</label>
     <input type="text" name="reasontohate" />
 
     <br><br><br><br>
