--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
           </select>
 
           <br><br><br><br>
-          <label for="familiaritynum">(*)您對於利用聽力分辨英文語音數字 (one, two, three...) 的信心程度為何？</label>
+          <label for="familiaritynum">(*)您對於利用聽力分辨英文語音數字 0 至 9 (zero, one, two ...) 的信心程度為何？</label>
           <!-- <input type="number" id="familiaritynum" name="familiaritynum" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/> -->
           <ul class='likert'>
             <li>
@@ -89,7 +89,7 @@
           </ul>
 
           <br><br><br><br>
-          <label for="familiaritycaptcha" style="font-size: 14px;">(*)您在這個實驗之前，對於「人機驗證」(CAPTCHA，亦即全自動公開化圖靈測驗人機辨識) <b style="font-weight: bold;">熟悉程度</b>為：(例如下圖)</label>
+          <label for="familiaritycaptcha" style="font-size: 14px;">(*)您在這個實驗之前，對於「人機驗證」(CAPTCHA，亦即全自動公開化圖靈測驗人機辨識) <b style="font-weight: bold;">熟悉程度</b>為：(如下圖網頁截圖範例)</label>
           <img src="../static/images/captcha_ex.png" with="600" heigh="400" alt="captcha example, answer is xbMDNX">
           <!-- <input type="number" id="familiaritycaptcha" name="familiaritycaptcha" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/> -->
           <ul class='likert'>
@@ -116,7 +116,7 @@
           </ul>
 
           <br><br><br><br>
-          <label for="familiarityaudio">(*)您在這個實驗之前，對於「語音版本的」人機驗證 (Audio Captcha) <b style="font-weight: bold;">熟悉程度為</b>： (例：點擊「播放鍵」撥出語音版本之人機驗證，或參考: <a href="https://www.phpcaptcha.org/try-securimage/">https://www.phpcaptcha.org/try-securimage/</a> 中的第一個例子)
+          <label for="familiarityaudio">(*)您在這個實驗之前，對於「語音版本的」人機驗證 (Audio CAPTCHA) <b style="font-weight: bold;">熟悉程度為</b>： (下圖為網頁截圖之範例：題目會要求您點擊播放鍵，撥出語音版本之人機驗證題目，並請您輸入聽到的數字及英文字母；可參閱: <a href="https://www.phpcaptcha.org/try-securimage/">https://www.phpcaptcha.org/try-securimage/</a> 中的第一個例子)
           </label>
           <img src="../static/images/audio_captcha_ex.png" with="600" heigh="400" alt="captcha example, answer is xbMDNX">
           <!-- <input type="number" id="familiarityaudio" name="familiarityaudio" placeholder="請輸入數字 1-5（1: 非常沒信心 - 5: 非常有信心）"required/> -->
@@ -146,7 +146,7 @@
 
 
           <br><br><br><br>
-          <label for="apparatus" style="font-size: 14px;">(*)請問您預計在待會的實驗中使用什麼語音播放方式完成 audio captcha 的測驗（請使用相同之方式完成接下來的所有測驗 </label>
+          <label for="apparatus" style="font-size: 14px;">(*)請問您預計在待會的實驗中使用什麼語音播放方式完成 Audio CAPTCHA 的測驗（請使用相同之方式完成接下來的所有測驗 </label>
           <select name="apparatus" required>
             <option value="earphone"> 耳機 </option>
             <option value="speaker"> 喇叭（包含電腦或是螢幕之內建喇叭）</option>
