--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -15,14 +15,14 @@
     <ul id="progressbar">
       <li class="active">Demographic</li>
       <li class="active">練習</li>
-      <li>Prototype 1</li>
-      <li>Feedback 1</li>
-      <li>Prototype 2</li>
-      <li>Feedback 2</li>
-      <li>Prototype 3</li>
-      <li>Feedback 3</li>
-      <li>Prototype 4</li>
-      <li>Feedback 4</li>
+      <li>種類 1</li>
+      <li>回饋 1</li>
+      <li>種類 2</li>
+      <li>回饋 2</li>
+      <li>種類 3</li>
+      <li>回饋 3</li>
+      <li>種類 4</li>
+      <li>回饋 4</li>
       <li>Finish</li>
     </ul>
     
@@ -63,7 +63,7 @@
       </fieldset>
 
       <fieldset class="prototypecard">
-          <h2 class="fs-title">Prototype - Math</h2>
+          <h2 class="fs-title">種類 1</h2>
           <h3 id="sub1" class="fs-subtitle">第一題</h3>
           <div id="instance1_1">
             按下「播放鍵」後，請邊聽邊輸入您所聽到的數字：<br/>
@@ -124,7 +124,7 @@
       </fieldset>
 
       <fieldset class="feedbackcard">
-          <h2 class="fs-title">Feedback1</h2>
+          <h2 class="fs-title">回饋 1</h2>
           <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
           <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
           <ul class='likert'>
@@ -137,7 +137,7 @@
             <label>2</label>
           </li>
           <li>
-            <input type="radio" name="likert_fb1_1" value="3" checked>
+            <input type="radio" name="likert_fb1_1" value="3">
             <label>3</label>
           </li>
           <li>
@@ -160,7 +160,7 @@
               <label>2</label>
             </li>
             <li>
-              <input type="radio" name="likert_fb1_2" value="3" checked>
+              <input type="radio" name="likert_fb1_2" value="3">
               <label>3</label>
             </li>
             <li>
@@ -197,7 +197,7 @@
     </fieldset>
 
     <fieldset class="prototypecard">
-      <h2 class="fs-title">Prototype - Count</h2>
+      <h2 class="fs-title">種類 2</h2>
       <h3 id="sub2" class="fs-subtitle">第一題</h3>
       <div id="instance2_1">
         按下「播放鍵」後，請邊聽邊輸入您所聽到的數字： <br/>
@@ -256,7 +256,7 @@
     </fieldset>
 
     <fieldset class="feedbackcard">
-      <h2 class="fs-title">Feedback2</h2>
+      <h2 class="fs-title">回饋 2</h2>
           <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
           <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
           <ul class='likert'>
@@ -269,7 +269,7 @@
             <label>2</label>
           </li>
           <li>
-            <input type="radio" name="likert_fb2_1" value="3" checked>
+            <input type="radio" name="likert_fb2_1" value="3">
             <label>3</label>
           </li>
           <li>
@@ -292,7 +292,7 @@
               <label>2</label>
             </li>
             <li>
-              <input type="radio" name="likert_fb2_2" value="3" checked>
+              <input type="radio" name="likert_fb2_2" value="3">
               <label>3</label>
             </li>
             <li>
@@ -329,7 +329,7 @@
     </fieldset>
 
     <fieldset class="prototypecard">
-      <h2 class="fs-title">Prototype - Control with pauses</h2>
+      <h2 class="fs-title">種類 3</h2>
       <h3 id="sub3" class="fs-subtitle">第一題</h3>
       <div id="instance3_1">
         按下「播放鍵」後，請邊聽邊輸入您所聽到的數字：<br/>
@@ -388,7 +388,7 @@
     </fieldset>
 
     <fieldset class="feedbackcard">
-      <h2 class="fs-title">Feedback3</h2>
+      <h2 class="fs-title">回饋 3</h2>
           <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
           <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
           <ul class='likert'>
@@ -401,7 +401,7 @@
             <label>2</label>
           </li>
           <li>
-            <input type="radio" name="likert_fb3_1" value="3" checked>
+            <input type="radio" name="likert_fb3_1" value="3">
             <label>3</label>
           </li>
           <li>
@@ -424,7 +424,7 @@
               <label>2</label>
             </li>
             <li>
-              <input type="radio" name="likert_fb3_2" value="3" checked>
+              <input type="radio" name="likert_fb3_2" value="3">
               <label>3</label>
             </li>
             <li>
@@ -461,7 +461,7 @@
     </fieldset>
 
     <fieldset class="prototypecard">
-      <h2 class="fs-title">Prototype - Sounds</h2>
+      <h2 class="fs-title">種類 ˋ</h2>
       <h3 id="sub4" class="fs-subtitle">第一題</h3>
       <div id="instance4_1">
         按下「播放鍵」後，請邊聽邊輸入您所聽到的數字：<br/>
@@ -519,7 +519,7 @@
     </fieldset>
 
     <fieldset class="feedbackcard">
-      <h2 class="fs-title">Feedback4</h2>
+      <h2 class="fs-title">回饋 4</h2>
           <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
           <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
           <ul class='likert'>
@@ -532,7 +532,7 @@
             <label>2</label>
           </li>
           <li>
-            <input type="radio" name="likert_fb4_1" value="3" checked>
+            <input type="radio" name="likert_fb4_1" value="3">
             <label>3</label>
           </li>
           <li>
@@ -555,7 +555,7 @@
               <label>2</label>
             </li>
             <li>
-              <input type="radio" name="likert_fb4_2" value="3" checked>
+              <input type="radio" name="likert_fb4_2" value="3">
               <label>3</label>
             </li>
             <li>
@@ -571,17 +571,6 @@
           <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
           <input type="text" name="text_fb4_1" id="text_fb4_1"/>
 
-          <!-- <label class="statement">Do you prefer the current alphanumeric audio CAPTCHAs you already use relative to this design?</label>
-          <ul class='likert'>
-            <li>
-              <input type="radio" name="likert_fb1_3" value="yes"  checked>
-              <label>Yes</label>
-            </li>
-            <li>
-              <input type="radio" name="likert_fb1_3" value="no">
-              <label>No</label>
-            </li>
-          </ul> -->
           <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
           <input type="text" name="text_fb4_2" id="text_fb4_2"/>
 
@@ -601,16 +590,16 @@
       
           <p style = "font-weight: bold;">(*)請按照您的喜好程度，排序您剛剛測試的所有 Audio CAPTCHA，最喜歡的放在最上面，依序排列下去。</p><br>
           <ul id="input_ul">
-            <li class="ui-state"><span id='span_tag'>&#x21C5;</span><input type="text" disabled/><audio id="{{instance1_1}}" controls preload src="{{instance1_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類1<audio id="{{instance1_1}}" controls preload src="{{instance1_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>&#x21C5;</span><input type="text" disabled/><audio id="{{instance2_1}}" controls preload src="{{instance2_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類2<audio id="{{instance2_1}}" controls preload src="{{instance2_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>&#x21C5;</span><input type="text" disabled/><audio id="{{instance3_1}}" controls preload src="{{instance3_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類3<audio id="{{instance3_1}}" controls preload src="{{instance3_1}}">
               Your browser does not support the audio element.
             </audio></li>
-            <li class="ui-state"><span id='span_tag'>&#x21C5;</span><input type="text" disabled/><audio id="{{instance4_1}}" controls preload src="{{instance4_1}}">
+            <li class="ui-state"><span id='span_tag'>請按此上下拖曳</span><input type="text" disabled/>種類4<audio id="{{instance4_1}}" controls preload src="{{instance4_1}}">
               Your browser does not support the audio element.
             </audio></li>
           </ul>
@@ -626,8 +615,8 @@
           <br><br><br><br>
           <p>非常感謝您參與本實驗，接下來之資訊為研究團隊為您申報實驗報酬所使用之資訊，請如實填答以免報酬給予失敗，此一資訊不會挪為他用並在報酬發送後刪除！</p>
           <br><br><br>
-          <label for="name">名字</label><input type="text" id="name" name="name" placeholder="名字"/>
-          <label for="email">Email</label><input type="email" id="email" name="email" placeholder="Email"/>
+          <label for="name">(*) 名字</label><input type="text" id="name" name="name" placeholder="名字"/>
+          <label for="email">(*) Email</label><input type="email" id="email" name="email" placeholder="Email"/>
       
           <input type="button" name="btnsubmit" class="btnsubmit action-button" value="Submit" onclick="before_submit()"/>
       
