--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,7 @@ font-size: 1.1em;
 margin-left: 5px; */
 cursor: pointer;
 height:120%;
+font-size: 11px;
 }
 
 #input_ul .ui-state input[type="text"] {
